--- a/PopEngine.visualstudio/PopEngine_Uwp.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine_Uwp.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="..\src\JsCoreBind.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\JavascriptConvertImports.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
     <ClCompile Include="..\src\JsCoreDll.cpp">
       <Filter>Source</Filter>
     </ClCompile>
