--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,19 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "Build Nvidia",
+			"label": "Build Minimal",
 			"type": "shell",
 			"command": "(cd PopEngine.Linux && make osTarget=Nvidia)",
+			"problemMatcher": [],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
+		},
+		{
+			"label": "Build Nvidia",
+			"type": "shell",
+			"command": "(cd PopEngine.Linux && make osTarget=Nvidia ENABLE_OPENGL=true ENABLE_MEDIA=true)",
 			"problemMatcher": [],
 			"group": {
 				"kind": "build",
@@ -32,6 +42,13 @@
 				"kind": "build",
 				"isDefault": true
 			}
+		},
+		{
+			"label": "Clean",
+			"type": "shell",
+			"command": "(cd PopEngine.Linux && make clean)",
+			"problemMatcher": [],
+			"group": "build"	
 		},
 		{
 			"label": "Rebuild all",
