--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceRoot}/Build/Nvidia_Debug/PopEngineTestApp",
-			"args": [],
+			"args": ["/home/graham/Code/PopCap/PopCap"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceRoot}",
 			"environment": [],
@@ -20,7 +20,11 @@
 					"description": "Enable pretty-printing for gdb",
 					"text": "-enable-pretty-printing",
 					"ignoreFailures": true
-				}
+				},
+                {
+                    "description": "ignore SIGUSR1 signal",
+                    "text": "handle SIGUSR1 nostop noprint pass"
+                }
 			],
 			"preLaunchTask": "Build Nvidia Debug"
 		}
