--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,30 @@
                 }
 			],
 			"preLaunchTask": "Build Nvidia Debug"
+		},
+		{
+			"name": "Nvidia Release",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceRoot}/Build/Nvidia_Release/PopEngineTestApp",
+			"args": ["/home/graham/Code/PopCap/PopCap"],
+			"stopAtEntry": false,
+			"cwd": "${workspaceRoot}",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "gdb",
+			"setupCommands": [
+				{
+					"description": "Enable pretty-printing for gdb",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": true
+				},
+                {
+                    "description": "ignore SIGUSR1 signal",
+                    "text": "handle SIGUSR1 nostop noprint pass"
+                }
+			],
+			"preLaunchTask": "Build Nvidia Release"
 		}
 	]
 }
